--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.5.3",
     "immutable": "^3.8.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-icons-kit": "^1.1.7",
     "react-scripts": "1.1.4",
     "slate": "^0.37.7",
     "slate-react": "^0.15.9"
